--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build APK Release
+name: Build APK
 
 on:
   push:
@@ -7,6 +7,7 @@ on:
 
 jobs:
   build:
+    name: Build Debug APK
     runs-on: ubuntu-latest
 
     steps:
@@ -19,19 +20,13 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Grant permission to gradlew
-        run: chmod +x ./gradlew
-
-      - name: Build Release APK
-        run: ./gradlew assembleRelease
-
-      - name: Upload APK Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: MaherBrowser-Release-APK
-          path: app/build/outputs/apk/release/app-release.apk
-
-      - name: Print download link
+      - name: Build APK
         run: |
-          echo "✨ رابط التنزيل من هنا:"
-          echo "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts"
+          chmod +x ./gradlew || true
+          ./gradlew assembleDebug
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: MaherBrowser-APK
+          path: app/build/outputs/apk/debug/app-debug.apk
